feat: new contracts api
