# lib/flow_contract_syncer_web/router.ex
@@ -30,10 +30,6 @@ defmodule FlowContractSyncerWeb.Router do
     get("/search", ContractSearchController, :search)
     get("/contracts", ContractController, :index)
     get("/contracts/:uuid", ContractController, :show)
-    get("/contracts/latest", ContractController, :latest)
-    get("/contracts/popular", ContractController, :popular)
-    get("/contracts/dependent", ContractController, :popular)
-    get("/contracts/sync", ContractController, :sync)
   end
 
   scope "/api/v1/swagger" do
