# lib/flow_contract_syncer_web/views/contract_view.ex
@@ -4,14 +4,11 @@ defmodule FlowContractSyncerWeb.ContractView do
   use FlowContractSyncerWeb, :view
 
   alias FlowContractSyncer.Repo
-  alias FlowContractSyncer.Schema.Contract
+  alias FlowContractSyncer.Schema.Contract 
 
   def render("show.json", %{contract: contract}) do
-    contract =
-      Repo.preload(contract, [
-        :dependencies,
-        :dependants
-      ])
+    contract = Contract.with_deps_uuids(contract)
+    contract.dependants |> Enum.uniq |> Enum.count |> IO.inspect
 
     %{
       code: 0,
@@ -20,24 +17,18 @@ defmodule FlowContractSyncerWeb.ContractView do
         address: contract.address,
         name: contract.name,
         code: contract.code,
-        dependencies: get_dependencies_uuid(contract),
-        dependants: get_dependants_uuid(contract)
+        dependencies: contract.dependencies,
+        dependants: contract.dependants
       }
     }
   end
 
-  def render("latest.json", %{contracts: contracts}) do
-    contracts =
-      Repo.preload(contracts, [
-        :dependencies,
-        :dependants
-      ])
-
+  def render("index.json", %{contracts: contracts}) do
     %{
       code: 0,
       data:
-        render_many(contracts, FlowContractSyncerWeb.ContractSearchView, "contract.json",
-          as: :contract
+        render_many(contracts, FlowContractSyncerWeb.PartialContractView, "partial_contract.json",
+          as: :partial_contract
         )
     }
   end
@@ -47,19 +38,5 @@ defmodule FlowContractSyncerWeb.ContractView do
       code: code,
       message: message
     }
-  end
-
-  defp get_dependencies_uuid(%Contract{
-         dependencies: deps
-       })
-       when is_list(deps) do
-    deps |> Enum.map(& &1.uuid)
-  end
-
-  defp get_dependants_uuid(%Contract{
-         dependants: dependants
-       })
-       when is_list(dependants) do
-    dependants |> Enum.map(& &1.uuid)
   end
 end
